plugins {
    id 'java'
}


repositories {
    mavenCentral()
}
//Desktop jar with installer and separated library
jar {
    dependsOn ":gay"
    archiveFileName = "Ozone-Desktop.jar"
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    manifest {
        attributes 'Main-Class': 'Premain.InstallerEntryPoint'
    }
}
repositories {
    mavenCentral()
    maven { url 'https://www.jitpack.io' }
    flatDir {
        dirs 'libs'
    }
    flatDir {
        dirs 'lib'
    }
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation rootProject
    compileOnly "com.github.o7-Fire.Atomic-Library:Desktop:$atomHash"
    compileOnly "com.github.Anuken.Mindustry:desktop:$mindustryVersion"
    compileOnly "com.github.Anuken.Mindustry:annotations:$mindustryVersion"
    compileOnly "com.github.Anuken.Arc:backend-headless:$mindustryVersion"
    implementation 'io.sentry:sentry:3.1.0'
    compileOnly group: 'com.formdev', name: 'flatlaf', version: '0.43'
    compileOnly group: 'com.miglayout', name: 'miglayout-core', version: '5.2'
    compileOnly group: 'com.miglayout', name: 'miglayout-swing', version: '5.2'
    compileOnly 'com.github.MinnDevelopment:java-discord-rpc:v2.0.1'


}

tasks.withType(JavaCompile) {
    sourceCompatibility = 14
    targetCompatibility = 14
    options.encoding = "UTF-8"
    options.compilerArgs += ["-Xlint:deprecation"]
}